name:                tint
version:             0.1.0.0
synopsis:            A multi-language syntax highlighter.
description:
homepage:            https://github.com/isturdy/tint
license:             MIT
license-file:        LICENSE
author:              Ian Sturdy
maintainer:          sturdyi12@mail.wlu.edu
category:            Text
build-type:          Simple
cabal-version:       >=1.8
stability:	     experimental

library
  exposed-modules:
    Text.Tint
  GHC-Options:
    -Wall

  build-depends:
    base ==4.*,

source-repository head
  type: git
  location: https://github.com/isturdy/tint